<resources>
    <string name="app_name">Silence</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="delete">Delete</string>
    <string name="please_wait">Please wait...</string>
    <string name="AbstractNotificationBuilder_new_message">New message</string>
    <string name="ApplicationPreferenceActivity_you_havent_set_a_passphrase_yet">You haven\'t set a passphrase yet!</string>
    <plurals name="ApplicationPreferencesActivity_messages_per_conversation">
        <item quantity="one">1 message per conversation</item>
        <item quantity="other">%d messages per conversation</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete_all_old_messages_now">Delete all old messages now?</string>
    <plurals name="ApplicationPreferencesActivity_this_will_immediately_trim_all_conversations_to_the_d_most_recent_messages">
        <item quantity="one">This will immediately trim all conversations to the most recent message.</item>
        <item quantity="other">This will immediately trim all conversations to the %d most recent messages.</item>
    </plurals>
    <string name="ApplicationPreferencesActivity_delete">Delete</string>
    <string name="ApplicationPreferencesActivity_disable_storage_encryption">Disable storage encryption?</string>
    <string name="ApplicationPreferencesActivity_warning_this_will_disable_storage_encryption_for_all_messages">
        Warning, this will disable storage encryption for all messages and keys. Your encrypted
        sessions will continue to function, but anyone who gains physical access to your device will be
        able to read them.
    </string>
    <string name="ApplicationPreferencesActivity_disable">Disable</string>
    <string name="ApplicationPreferencesActivity_sms_enabled">Incoming SMS enabled</string>
    <string name="ApplicationPreferencesActivity_tap_to_change_your_default_sms_app">Tap to change your default SMS app</string>
    <string name="ApplicationPreferencesActivity_sms_disabled">Incoming SMS disabled</string>
    <string name="ApplicationPreferencesActivity_tap_to_make_silence_your_default_sms_app">Tap to make Silence your default SMS app</string>
    <string name="ApplicationPreferencesActivity_on">on</string>
    <string name="ApplicationPreferencesActivity_On">On</string>
    <string name="ApplicationPreferencesActivity_off">off</string>
    <string name="ApplicationPreferencesActivity_Off">Off</string>
    <string name="ApplicationPreferencesActivity_sms">SMS</string>
    <string name="ApplicationPreferencesActivity_mms">MMS</string>
    <string name="ApplicationPreferencesActivity_incoming_summary">Incoming %s</string>
    <string name="ApplicationPreferencesActivity_privacy_summary">Passphrase %1$s, Screen security %2$s</string>
    <string name="ApplicationPreferencesActivity_appearance_summary">Theme %1$s, Language %2$s</string>
    <plurals name="AppProtectionPreferenceFragment_minutes">
        <item quantity="one">1 minute</item>
        <item quantity="other">%d minutes</item>
    </plurals>
    <string name="DraftDatabase_Draft_image_snippet">(image)</string>
    <string name="DraftDatabase_Draft_audio_snippet">(audio)</string>
    <string name="DraftDatabase_Draft_video_snippet">(video)</string>
    <string name="AttachmentManager_cant_open_media_selection">Can\'t find an app to select media.</string>
    <string name="AttachmentTypeSelectorAdapter_camera">Camera</string>
    <string name="AttachmentTypeSelectorAdapter_picture">Picture</string>
    <string name="AttachmentTypeSelectorAdapter_video">Video</string>
    <string name="AttachmentTypeSelectorAdapter_audio">Audio</string>
    <string name="AttachmentTypeSelectorAdapter_contact">Contact info</string>
    <string name="BlockedContactsActivity_blocked_contacts">Blocked contacts</string>
    <string name="ConversationItem_message_size_d_kb">Message size: %d KB</string>
    <string name="ConversationItem_expires_s">Expires: %s</string>
    <string name="ConversationItem_error_not_delivered">Not delivered</string>
    <string name="ConversationItem_view_secure_media_question">View secure media?</string>
    <string name="ConversationItem_this_media_has_been_stored_in_an_encrypted_database_external_viewer_warning">This media has been stored in an encrypted database. Unfortunately, to view it with an external content viewer currently requires the data to be temporarily decrypted and written to storage. Are you sure that you would like to do this?</string>
    <string name="ConversationItem_error_received_stale_key_exchange_message">Outdated key exchange message received.</string>
    <string name="ConversationItem_received_key_exchange_message_tap_to_process">Received key exchange message, tap to process.</string>
    <string name="ConversationItem_group_action_left">%1$s has left the group.</string>
    <string name="ConversationItem_click_for_details">Tap for details</string>
    <string name="ConversationItem_click_to_approve_unencrypted">Tap for unsecured fallback</string>
    <string name="ConversationItem_click_to_approve_unencrypted_sms_dialog_title">Fallback to unencrypted SMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_mms_dialog_title">Fallback to unencrypted MMS?</string>
    <string name="ConversationItem_click_to_approve_unencrypted_dialog_message">This message will <b>not</b> be encrypted because a secure session could not be established.\n\nSend unsecured message?</string>
    <string name="ConversationItem_unable_to_open_media">Can\'t find an app able to open this media.</string>
    <string name="ConversationItem_from_s">from %s</string>
    <string name="ConversationItem_to_s">to %s</string>
    <string name="ConversationItem_xmpp_address_update_silence">XMPP address. Update Silence to enable this feature.</string>
    <string name="ConversationActivity_initiate_secure_session_question">Initiate secure session?</string>
    <string name="ConversationActivity_initiate_secure_session_with_s_question">Initiate secure session with %s?</string>
    <string name="ConversationActivity_detected_silence_initiate_session_question">Message received from someone who also has Silence, initiate a secure encrypted session?</string>
    <string name="ConversationActivity_abort_secure_session_confirmation">End secure session?</string>
    <string name="ConversationActivity_are_you_sure_that_you_want_to_abort_this_secure_session_question">Are you sure you want to end this secure session?</string>
    <string name="ConversationActivity_delete_thread_question">Delete conversation?</string>
    <string name="ConversationActivity_this_will_permanently_delete_all_messages_in_this_conversation">This will permanently delete all messages in this conversation.</string>
    <string name="ConversationActivity_add_attachment">Add attachment</string>
    <string name="ConversationActivity_select_contact_info">Select contact info</string>
    <string name="ConversationActivity_compose_message">Compose message</string>
    <string name="ConversationActivity_sorry_there_was_an_error_adding_your_attachment">Sorry, there was an error adding your attachment.</string>
    <string name="ConversationActivity_the_gif_you_selected_was_too_big">The GIF you selected was too big!</string>
    <string name="ConversationActivity_sorry_the_selected_video_exceeds_message_size_restrictions">Sorry, the selected video exceeds message size restrictions (%1$skB).</string>
    <string name="ConversationActivity_sorry_the_selected_audio_exceeds_message_size_restrictions">Sorry, the selected audio exceeds message size restrictions (%1$skB).</string>
    <string name="ConversationActivity_recipient_is_not_a_valid_sms_or_email_address_exclamation">Recipient is not a valid SMS or email address!</string>
    <string name="ConversationActivity_message_is_empty_exclamation">The message you are trying to send is empty!</string>
    <string name="RecipientPreferenceActivity_unblock">Unblock</string>
    <string name="conversation_activity__send">Send</string>
    <string name="conversation_activity__emoji_toggle_description">Toggle emoji keyboard</string>
    <string name="preferences__pref_all_sms_title">Receive all SMS</string>
    <string name="preferences__pref_all_mms_title">Receive all MMS</string>
    <string name="preferences__use_silence_for_viewing_and_storing_all_incoming_text_messages">Use Silence for viewing and storing all incoming text messages</string>
    <string name="preferences__use_silence_for_viewing_and_storing_all_incoming_multimedia_messages">Use Silence for viewing and storing all incoming multimedia messages</string>
    <string name="preferences__keyboard_settings">Keyboard options</string>
    <string name="preferences__disable_emoji_drawer">Disable emoji drawer</string>
    <string name="preferences__enable_this_option_if_your_keyboard_supports_emojis">Enable this option if your keyboard supports emojis.</string>
    <string name="preferences__complete_key_exchanges">Complete key exchanges</string>
    <string name="preferences__automatically_complete_key_exchanges_for_new_sessions_or_for_existing_sessions_with_the_same_identity_key">Automatically complete key exchanges for new sessions or for existing sessions with the same identity key</string>
    <string name="preferences__advanced_mms_access_point_names">Manual MMS settings</string>
    <string name="preferences__sms_delivery_reports">SMS delivery reports</string>
    <string name="preferences__request_a_delivery_report_for_each_sms_message_you_send">Request a delivery report for each SMS message you send</string>
    <string name="preferences__sms_delivery_reports_notification">SMS delivery reports notification</string>
    <string name="preferences__display_a_notification_when_a_delivery_report_is_received">Display a notification when a delivery report is received</string>
    <string name="preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length">Automatically delete older messages once a conversation exceeds a specified length</string>
    <string name="preferences__delete_old_messages">Delete old messages</string>
    <string name="preferences__conversation_length_limit">Conversation length limit</string>
    <string name="preferences__trim_all_conversations_now">Trim all conversations now</string>
    <string name="preferences__scan_through_all_conversations_and_enforce_conversation_length_limits">Scan through all conversations and enforce conversation length limits</string>
    <string name="preferences__make_default_sms_app">Set as default SMS app</string>
    <string name="preferences__make_silence_the_default_sms_mms_app">Make Silence the default SMS/MMS application for your system.</string>
    <string name="preferences__submit_debug_log">Submit debug log</string>
    <string name="preferences__support_wifi_calling">\'Wi-Fi Calling\' compatibility mode</string>
    <string name="preferences__enable_if_your_device_supports_sms_mms_delivery_over_wifi">Enable if your device uses SMS/MMS delivery over Wi-Fi (only enable when \'Wi-Fi Calling\' is enabled on your device).</string>
    <string name="preferences__show_sent_time">Show sent time</string>
    <string name="preferences__show_sent_time_instead_of_received_time_in_conversations">Show sent time instead of received time for incoming messages</string>
    <string name="preferences_chats__mms">MMS</string>
    <string name="preferences__auto_retrieve">Auto-retrieve</string>
    <string name="preferences__automatically_retrieve_mms_messages">Automatically retrieve MMS messages</string>
    <string name="preferences__roaming_auto_retrieve">Roaming auto-retrieve</string>
    <string name="preferences__automatically_retrieve_mms_when_roaming">Automatically retrieve MMS when roaming</string>
    <string name="preferences_chats__message_trimming">Message trimming</string>
</resources>