<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:key="media_download" android:title="@string/preferences_chats__mms">
        <org.smssecure.smssecure.components.SwitchPreferenceCompat
            android:defaultValue="true"
            android:key="pref_media_download"
            android:title="@string/preferences__auto_retrieve"
            android:summary="@string/preferences__automatically_retrieve_mms_messages" />

        <org.smssecure.smssecure.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_media_download_roaming"
            android:dependency="pref_media_download"
            android:title="@string/preferences__roaming_auto_retrieve"
            android:summary="@string/preferences__automatically_retrieve_mms_when_roaming" />

    </PreferenceCategory>

    <PreferenceCategory android:key="message_trimming" android:title="@string/preferences_chats__message_trimming">
        <org.smssecure.smssecure.components.SwitchPreferenceCompat
            android:defaultValue="false"
            android:key="pref_trim_threads"
            android:summary="@string/preferences__automatically_delete_older_messages_once_a_conversation_exceeds_a_specified_length"
            android:title="@string/preferences__delete_old_messages" />

        <EditTextPreference android:defaultValue="500"
                            android:key="pref_trim_length"
                            android:title="@string/preferences__conversation_length_limit"
                            android:inputType="number"
                            android:dependency="pref_trim_threads" />

        <Preference android:key="pref_trim_now"
                    android:title="@string/preferences__trim_all_conversations_now"
                    android:summary="@string/preferences__scan_through_all_conversations_and_enforce_conversation_length_limits"
                    android:dependency="pref_trim_threads" />
    </PreferenceCategory>
</PreferenceScreen>
