<?xml version="1.0" encoding="utf-8"?>

<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <ListPreference android:key="pref_enter_key_type"
                    android:defaultValue="enter"
                    android:title="@string/preferences__keyboard_settings"
                    android:entries="@array/pref_enter_key_entries"
                    android:entryValues="@array/pref_enter_key_values"/>

    <org.smssecure.smssecure.components.SwitchPreferenceCompat
                        android:defaultValue="false"
                        android:key="pref_disable_emoji_drawer"
                        android:title="@string/preferences__disable_emoji_drawer"
                        android:summary="@string/preferences__enable_this_option_if_your_keyboard_supports_emojis" />

    <org.smssecure.smssecure.components.SwitchPreferenceCompat
                        android:defaultValue="true"
                        android:key="pref_auto_complete_key_exchange"
                        android:title="@string/preferences__complete_key_exchanges"
                        android:summary="@string/preferences__automatically_complete_key_exchanges_for_new_sessions_or_for_existing_sessions_with_the_same_identity_key" />

    <Preference android:key="pref_submit_debug_logs"
                android:title="@string/preferences__submit_debug_log"/>
</PreferenceScreen>
