<?xml version="1.0" encoding="utf-8"?>

<org.smssecure.smssecure.components.InputAwareLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/layout_container"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout android:id="@+id/conversation_container"
                  android:layout_width="match_parent"
                  android:layout_height="match_parent"
                  android:orientation="vertical"
                  android:paddingTop="?attr/actionBarSize"
                  android:gravity="bottom">

        <org.smssecure.smssecure.components.reminder.ReminderView
            android:id="@+id/reminder"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <FrameLayout android:id="@+id/fragment_content"
                     android:layout_width="match_parent"
                     android:layout_height="0dp"
                     android:layout_weight="1" />

        <ViewStub
                android:id="@+id/attachment_editor_stub"
                android:inflatedId="@+id/attachment_editor"
                android:layout="@layout/conversation_activity_attachment_editor_stub"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        <LinearLayout android:id="@+id/bottom_panel"
                      android:layout_width="fill_parent"
                      android:layout_height="wrap_content"
                      android:gravity="center_vertical"
                      android:orientation="horizontal"
                      android:clickable="true"
                      android:background="?android:windowBackground"
                      android:padding="5dp">

            <LinearLayout android:id="@+id/compose_bubble"
                          android:layout_width="0dp"
                          android:layout_height="wrap_content"
                          android:layout_weight="1"
                          android:background="@drawable/sent_bubble">

                <org.smssecure.smssecure.components.emoji.EmojiToggle
                        android:id="@+id/emoji_toggle"
                        android:layout_width="37dp"
                        android:layout_height="37dp"
                        android:layout_gravity="bottom"
                        android:background="@drawable/touch_highlight_background"
                        android:contentDescription="@string/conversation_activity__emoji_toggle_description" />

                <org.smssecure.smssecure.components.ComposeText
                        style="@style/ComposeEditText"
                        android:id="@+id/embedded_text_editor"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:minHeight="37dp"
                        android:layout_gravity="center_vertical"
                        android:layout_weight="1"
                        android:nextFocusForward="@+id/send_button"
                        android:nextFocusRight="@+id/send_button"
                        tools:hint="Send Silence message">
                    <requestFocus />
                </org.smssecure.smssecure.components.ComposeText>
            </LinearLayout>

            <org.smssecure.smssecure.components.AnimatingToggle
                    android:id="@+id/button_toggle"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:background="@drawable/circle_tintable"
                    android:layout_gravity="bottom">

                <ImageButton android:id="@+id/attach_button"
                             android:layout_width="match_parent"
                             android:layout_height="match_parent"
                             android:layout_gravity="center"
                             android:background="@drawable/circle_touch_highlight_background"
                             android:src="@drawable/ic_attach_white_24dp"
                             android:contentDescription="@string/ConversationActivity_add_attachment"
                             android:nextFocusLeft="@+id/embedded_text_editor" />

                <org.smssecure.smssecure.components.SendButton
                        android:id="@+id/send_button"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:contentDescription="@string/conversation_activity__send"
                        android:nextFocusLeft="@+id/embedded_text_editor"
                        android:src="?conversation_send_button_sms_insecure"
                        android:background="@drawable/circle_touch_highlight_background" />

            </org.smssecure.smssecure.components.AnimatingToggle>

        </LinearLayout>

        <Button android:id="@+id/unblock_button"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:padding="20dp"
                android:text="@string/RecipientPreferenceActivity_unblock"
                android:visibility="gone"/>

        <TextView android:id="@+id/space_left"
                  android:paddingLeft="5dip"
                  android:layout_width="fill_parent"
                  android:layout_height="wrap_content"
                  android:visibility="gone"
                  android:background="?android:windowBackground"
                  android:text="160/160 (1)" />


        <ViewStub
                android:id="@+id/emoji_drawer_stub"
                android:layout="@layout/conversation_activity_emojidrawer_stub"
                android:inflatedId="@+id/emoji_drawer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

    </LinearLayout>
</org.smssecure.smssecure.components.InputAwareLayout>
